sort.basic.lessons.sort.basic.cocktail.AlgCocktailSort2.scala.error
AlgCocktailSort2:4: error: not found: value debut
debut=0; fin=lgr-2;
^AlgCocktailSort2:4: error: not found: value fin
debut=0; fin=lgr-2;
         ^AlgCocktailSort2:14: error: not found: value fin
		fin-=1;
                ^AlgCocktailSort2:21: error: not found: value debut
		debut += 1;
                ^